--- a/faceview/build.gradle
+++ b/faceview/build.gradle
@@ -37,9 +37,9 @@ dependencies {
   androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
 }
 
-def libraryGroupId = 'io.blockv.sdk'
+def libraryGroupId = 'io.blockv.sdk-alpha'
 def libraryArtifactId = 'faceview'
-def libraryVersion = '3.0.1'
+def libraryVersion = '4.0.0-alpha.5'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -57,9 +57,9 @@ publishing {
       pom.withXml {
         def dependenciesNode = asNode().appendNode('dependencies')
         def dependencyNode = dependenciesNode.appendNode('dependency')
-        dependencyNode.appendNode('groupId', 'io.blockv.sdk')
+        dependencyNode.appendNode('groupId', 'io.blockv.sdk-alpha')
         dependencyNode.appendNode('artifactId', 'common')
-        dependencyNode.appendNode('version', '[2.0.0,3.0.0)')
+        dependencyNode.appendNode('version', '3.0.0-alpha.4')
         def versionPlugin = asNode()
           .appendNode('build')
           .appendNode('plugins')
@@ -74,7 +74,7 @@ publishing {
   }
   repositories {
     maven {
-      url "https://maven.blockv.io/artifactory/BLOCKv/"
+      url "https://maven.blockv.io/artifactory/Blockv-Debug/"
       credentials {
         username = "${blockv_artifactory_username}"
         password = "${blockv_artifactory_password}"
