--- a/face/build.gradle
+++ b/face/build.gradle
@@ -43,7 +43,7 @@ repositories {
 }
 def libraryGroupId = 'io.blockv.sdk-alpha'
 def libraryArtifactId = 'face'
-def libraryVersion = '4.0.0-alpha.15'
+def libraryVersion = '4.0.0-alpha.24'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
@@ -63,35 +63,35 @@ publishing {
         def commonDependency = dependenciesNode.appendNode('dependency')
         commonDependency.appendNode('groupId', 'io.blockv.sdk-alpha')
         commonDependency.appendNode('artifactId', 'common')
-        commonDependency.appendNode('version', '3.0.0-alpha.9')
+        commonDependency.appendNode('version', '3.0.0-alpha.14')
         def coreDependency = dependenciesNode.appendNode('dependency')
         coreDependency.appendNode('groupId', 'io.blockv.sdk-alpha')
         coreDependency.appendNode('artifactId', 'core')
-        coreDependency.appendNode('version', '4.0.0-alpha.15')
+        coreDependency.appendNode('version', '4.0.0-alpha.23')
         def faceviewDependency = dependenciesNode.appendNode('dependency')
         faceviewDependency.appendNode('groupId', 'io.blockv.sdk-alpha')
         faceviewDependency.appendNode('artifactId', 'faceview')
-        faceviewDependency.appendNode('version', '4.0.0-alpha.10')
+        faceviewDependency.appendNode('version', '4.0.0-alpha.17')
         def imageFaceDependency = dependenciesNode.appendNode('dependency')
-        imageFaceDependency.appendNode('groupId', 'io.blockv.faces')
+        imageFaceDependency.appendNode('groupId', 'io.blockv.faces-alpha')
         imageFaceDependency.appendNode('artifactId', 'image-face')
-        imageFaceDependency.appendNode('version', '[3.0.0,4.0.0)')
+        imageFaceDependency.appendNode('version', '4.0.0-alpha')
         def progressFaceDependency = dependenciesNode.appendNode('dependency')
-        progressFaceDependency.appendNode('groupId', 'io.blockv.faces')
+        progressFaceDependency.appendNode('groupId', 'io.blockv.faces-alpha')
         progressFaceDependency.appendNode('artifactId', 'image-progress-face')
-        progressFaceDependency.appendNode('version', '[3.0.0,4.0.0)')
+        progressFaceDependency.appendNode('version', '4.0.0-alpha')
         def policyFaceDependency = dependenciesNode.appendNode('dependency')
-        policyFaceDependency.appendNode('groupId', 'io.blockv.faces')
+        policyFaceDependency.appendNode('groupId', 'io.blockv.faces-alpha')
         policyFaceDependency.appendNode('artifactId', 'image-policy-face')
-        policyFaceDependency.appendNode('version', '[2.0.0,3.0.0)')
+        policyFaceDependency.appendNode('version', '4.0.0-alpha.1')
         def layerFaceDependency = dependenciesNode.appendNode('dependency')
-        layerFaceDependency.appendNode('groupId', 'io.blockv.faces')
+        layerFaceDependency.appendNode('groupId', 'io.blockv.faces-alpha')
         layerFaceDependency.appendNode('artifactId', 'image-layered-face')
-        layerFaceDependency.appendNode('version', '[2.0.0,3.0.0)')
+        layerFaceDependency.appendNode('version', '4.0.0-alpha.1')
         def webFaceDependency = dependenciesNode.appendNode('dependency')
-        webFaceDependency.appendNode('groupId', 'io.blockv.faces')
+        webFaceDependency.appendNode('groupId', 'io.blockv.faces-alpha')
         webFaceDependency.appendNode('artifactId', 'web-face')
-        webFaceDependency.appendNode('version', '[2.0.0,3.0.0)')
+        webFaceDependency.appendNode('version', '4.0.0-alpha.3')
         def versionPlugin = asNode()
           .appendNode('build')
           .appendNode('plugins')
