lock oauth activity in portrait mode

--- a/core/src/main/AndroidManifest.xml
+++ b/core/src/main/AndroidManifest.xml
@@ -6,6 +6,7 @@
       android:name="io.blockv.core.internal.oauth.OauthActivity"
       android:excludeFromRecents="true"
       android:label="Blockv OAuth"
+      android:screenOrientation="portrait"
       />
   </application>
 
