update gradle and migrate to androidx

--- a/common/build.gradle
+++ b/common/build.gradle
@@ -4,15 +4,15 @@ apply plugin: 'kotlin-android-extensions'
 apply plugin: 'maven-publish'
 
 android {
-  compileSdkVersion 27
+  compileSdkVersion 28
 
   defaultConfig {
     minSdkVersion 19
-    targetSdkVersion 27
+    targetSdkVersion 28
     versionCode 1
     versionName "1.0"
 
-    testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
+    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
   }
 
@@ -32,17 +32,17 @@ dependencies {
   implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-  implementation 'com.android.support:appcompat-v7:27.1.1'
+  implementation 'androidx.appcompat:appcompat:1.0.0'
 
   testImplementation 'junit:junit:4.12'
   testImplementation 'com.github.cbismuth:junit-repeat-rule:1.1.2'
   testImplementation 'org.json:json:20140107'
   testImplementation 'org.awaitility:awaitility-kotlin:3.1.1'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+  androidTestImplementation 'androidx.test:runner:1.1.0'
+  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
   androidTestImplementation 'org.awaitility:awaitility-kotlin:3.1.1'
-  androidTestImplementation 'com.android.support.test:runner:1.0.2'
-  androidTestUtil 'com.android.support.test:orchestrator:1.0.2'
+  androidTestImplementation 'androidx.test:runner:1.1.0'
+  androidTestUtil 'androidx.test:orchestrator:1.1.0'
 }
 repositories {
   mavenCentral()
