--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = '1.2.61'
+  ext.kotlin_version = '1.3.31'
   repositories {
     jcenter()
     maven { url 'https://maven.google.com' }
+    google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.1.3'
+    classpath 'com.android.tools.build:gradle:3.4.2'
     classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.1.1"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     // NOTE: Do not place your application dependencies here; they belong
@@ -34,6 +35,7 @@ allprojects {
         basic(BasicAuthentication)
       }
     }
+    google()
   }
 }
 
