--- a/faceview/build.gradle
+++ b/faceview/build.gradle
@@ -30,6 +30,8 @@ dependencies {
   implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
   implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+  implementation 'androidx.paging:paging-runtime:2.1.0'
+  implementation 'androidx.paging:paging-rxjava2:2.1.0'
   implementation project(':common')
 
   testImplementation 'junit:junit:4.12'
