--- a/core/build.gradle
+++ b/core/build.gradle
@@ -26,19 +26,19 @@ android {
 
 dependencies {
   implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation 'com.neovisionaries:nv-websocket-client:2.5'
-  implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-  implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
-  implementation 'androidx.appcompat:appcompat:1.0.0'
   implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
   implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-  implementation("io.blockv.faces-alpha:image-face:4.0.0-alpha.3")
-  implementation("io.blockv.faces-alpha:image-progress-face:4.0.0-alpha.3")
-  implementation("io.blockv.faces-alpha:image-policy-face:4.0.0-alpha.5")
-  implementation("io.blockv.faces-alpha:image-layered-face:4.0.0-alpha.4")
-  implementation("io.blockv.faces-alpha:web-face:4.0.0-alpha.7")
-  implementation "androidx.room:room-runtime:2.1.0"
-  kapt "androidx.room:room-compiler:2.1.0"
+  implementation 'com.neovisionaries:nv-websocket-client:2.8'
+  implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+  implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
+  implementation 'androidx.appcompat:appcompat:1.1.0'
+  implementation 'io.blockv.faces-alpha:image-face:4.0.0-alpha.4'
+  implementation 'io.blockv.faces-alpha:image-progress-face:4.0.0-alpha.4'
+  implementation 'io.blockv.faces-alpha:image-policy-face:4.0.0-alpha.6'
+  implementation 'io.blockv.faces-alpha:image-layered-face:4.0.0-alpha.5'
+  implementation 'io.blockv.faces-alpha:web-face:4.0.0-alpha.8'
+  implementation 'androidx.room:room-runtime:2.1.0'
+  kapt 'androidx.room:room-compiler:2.1.0'
   implementation 'androidx.room:room-rxjava2:2.1.0'
   implementation 'androidx.paging:paging-runtime:2.1.0'
   implementation 'androidx.paging:paging-rxjava2:2.1.0'
@@ -58,7 +58,7 @@ repositories {
 
 def libraryGroupId = 'io.blockv.sdk-alpha'
 def libraryArtifactId = 'core'
-def libraryVersion = '4.0.0-alpha.42'
+def libraryVersion = '4.0.0-alpha.43'
 
 task sourceJar(type: Jar) {
   from android.sourceSets.main.java.srcDirs
