--- a/faceview/build.gradle
+++ b/faceview/build.gradle
@@ -39,7 +39,7 @@ dependencies {
   androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
 
-def libraryGroupId = 'io.blockv.sdk-alpha'
+def libraryGroupId = 'com.github.VatomInc.android-sdk'
 def libraryArtifactId = 'faceview'
 def libraryVersion = '4.0.0-alpha.37'
 
@@ -82,13 +82,13 @@ publishing {
       }
     }
   }
-  repositories {
-    maven {
-      url "https://maven.blockv.io/artifactory/Blockv-Debug/"
-      credentials {
-        username = "${blockv_artifactory_username}"
-        password = "${blockv_artifactory_password}"
-      }
-    }
-  }
+  // repositories {
+  //   maven {
+  //     url "https://maven.blockv.io/artifactory/Blockv-Debug/"
+  //     credentials {
+  //       username = "${blockv_artifactory_username}"
+  //       password = "${blockv_artifactory_password}"
+  //     }
+  //   }
+  // }
 }
