--- a/build.gradle
+++ b/build.gradle
@@ -22,19 +22,19 @@ allprojects {
     maven {
       url "https://maven.google.com"
     }
-    maven {
-      url "https://maven.blockv.io/artifactory/BLOCKv"
-    }
-    maven {
-      url "https://maven.blockv.io/artifactory/Blockv-Debug/"
-      credentials {
-        username = "${blockv_artifactory_username}"
-        password = "${blockv_artifactory_password}"
-      }
-      authentication {
-        basic(BasicAuthentication)
-      }
-    }
+    // maven {
+    //   url "https://maven.blockv.io/artifactory/BLOCKv"
+    // }
+    // maven {
+    //   url "https://maven.blockv.io/artifactory/Blockv-Debug/"
+    //   credentials {
+    //     username = "${blockv_artifactory_username}"
+    //     password = "${blockv_artifactory_password}"
+    //   }
+    //   authentication {
+    //     basic(BasicAuthentication)
+    //   }
+    // }
     google()
   }
 }
