--- a/face/build.gradle
+++ b/face/build.gradle
@@ -1,7 +1,7 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
-apply plugin: 'maven-publish'
+apply plugin: 'maven'
 
 android {
   compileSdkVersion 28
@@ -41,7 +41,7 @@ dependencies {
 repositories {
   mavenCentral()
 }
-def libraryGroupId = 'io.blockv.sdk-alpha'
+def libraryGroupId = 'com.github.VatomInc.android-sdk'
 def libraryArtifactId = 'face'
 def libraryVersion = '4.0.0-alpha.79'
 
@@ -105,13 +105,13 @@ publishing {
       }
     }
   }
-  repositories {
-    maven {
-      url "https://maven.blockv.io/artifactory/Blockv-Debug/"
-      credentials {
-        username = "${blockv_artifactory_username}"
-        password = "${blockv_artifactory_password}"
-      }
-    }
-  }
+  // repositories {
+  //   maven {
+  //     url "https://maven.blockv.io/artifactory/Blockv-Debug/"
+  //     credentials {
+  //       username = "${blockv_artifactory_username}"
+  //       password = "${blockv_artifactory_password}"
+  //     }
+  //   }
+  // }
 }
