--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,14 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-  ext.kotlin_version = '1.3.72'
+  ext.kotlin_version = '1.5.20'
   repositories {
     jcenter()
     maven { url 'https://maven.google.com' }
     google()
   }
   dependencies {
-    classpath 'com.android.tools.build:gradle:3.4.2'
+    classpath 'com.android.tools.build:gradle:7.0.1'
     classpath "org.jfrog.buildinfo:build-info-extractor-gradle:4.1.1"
     classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
     // NOTE: Do not place your application dependencies here; they belong
@@ -18,14 +18,59 @@ buildscript {
 
 allprojects {
 
-  // SDK version
+  // SDK version, this gets applied to all sub-projects as well
   version = "4.0.1"
 
+  // Repos
   repositories {
-    jcenter()
     mavenCentral()
     maven { url "https://maven.google.com" }
     google()
   }
 
+}
+
+// Dependencies that all sub-projects use
+subprojects {
+  afterEvaluate {
+    dependencies {
+
+      // Kotlin
+      implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+      implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
+
+      // AndroidX
+      implementation 'androidx.core:core-ktx:1.6.0'
+      implementation 'androidx.appcompat:appcompat:1.3.1'
+
+      // RxAndroid
+      implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
+      implementation 'io.reactivex.rxjava2:rxjava:2.2.14'
+
+    }
+  }
+}
+
+// Android library details for all sub-projects
+subprojects {
+  afterEvaluate {
+    android {
+      compileSdkVersion 30
+      compileOptions {
+        sourceCompatibility 1.8
+        targetCompatibility 1.8
+      }
+      defaultConfig {
+        minSdkVersion 19
+        targetSdkVersion 30
+        versionCode 1
+        versionName "1.0"
+        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+      }
+    }
+  }
+}
+
+task clean(type: Delete) {
+  delete rootProject.buildDir
 }
