--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,47 +1,14 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 
 android {
-  compileSdkVersion 28
-
-  defaultConfig {
-    minSdkVersion 19
-    targetSdkVersion 28
-    versionCode 1
-    versionName "1.0"
-
-    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
+  buildFeatures {
+    viewBinding true
   }
-
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-    }
-  }
-
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
   implementation 'com.neovisionaries:nv-websocket-client:2.8'
-  implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-  implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
-  implementation 'androidx.appcompat:appcompat:1.0.0'
-  implementation 'androidx.room:room-rxjava2:2.1.0'
-
-  testImplementation 'junit:junit:4.12'
-  testImplementation 'com.github.cbismuth:junit-repeat-rule:1.1.2'
-  testImplementation 'org.json:json:20140107'
-  testImplementation 'org.awaitility:awaitility-kotlin:3.1.1'
-  androidTestImplementation 'androidx.test:runner:1.1.0'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
-  androidTestImplementation 'org.awaitility:awaitility-kotlin:3.1.1'
-  androidTestImplementation 'androidx.test:runner:1.1.0'
-  androidTestUtil 'androidx.test:orchestrator:1.1.0'
+  implementation 'androidx.room:room-rxjava2:2.3.0'
 }
