--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,55 +1,29 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'maven'
+apply plugin: 'maven-publish'
 apply plugin: 'kotlin-kapt'
 
 android {
-  compileSdkVersion 28
-
-  defaultConfig {
-    minSdkVersion 19
-    targetSdkVersion 28
-    versionCode 1
-    versionName "1.0"
-
-    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-  }
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-    }
+  buildFeatures {
+    viewBinding true
   }
 }
 
 dependencies {
-  implementation fileTree(dir: 'libs', include: ['*.jar'])
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation "org.jetbrains.kotlin:kotlin-reflect:$kotlin_version"
   implementation 'com.neovisionaries:nv-websocket-client:2.8'
-  implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-  implementation 'io.reactivex.rxjava2:rxjava:2.2.12'
-  implementation 'androidx.appcompat:appcompat:1.1.0'
-  implementation 'io.blockv.faces-alpha:image-face:4.0.0-alpha.5'
-  implementation 'io.blockv.faces-alpha:image-progress-face:4.0.0-alpha.5'
-  implementation 'io.blockv.faces-alpha:image-policy-face:4.0.0-alpha.10'
-  implementation 'io.blockv.faces-alpha:image-layered-face:4.0.0-alpha.6'
-  implementation 'io.blockv.faces-alpha:web-face:4.0.0-alpha.11'
-  implementation 'androidx.room:room-runtime:2.1.0'
-  kapt 'androidx.room:room-compiler:2.1.0'
-  implementation 'androidx.room:room-rxjava2:2.1.0'
-  implementation 'androidx.paging:paging-runtime:2.1.0'
-  implementation 'androidx.paging:paging-rxjava2:2.1.0'
+  implementation 'androidx.room:room-runtime:2.3.0'
+  kapt 'androidx.room:room-compiler:2.3.0'
+  implementation 'androidx.room:room-rxjava2:2.3.0'
+  implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
+  implementation 'androidx.paging:paging-rxjava2-ktx:3.0.1'
 
   implementation project(':common')
   implementation project(':face')
   implementation project(':faceview')
-
-  androidTestImplementation('androidx.test.espresso:espresso-core:3.1.0', {
-    exclude group: 'com.android.support', module: 'support-annotations'
-  })
-  testImplementation 'junit:junit:4.12'
+  implementation project(':image-face')
+  implementation project(':image-progress-face')
+  implementation project(':image-policy-face')
+  implementation project(':image-layered-face')
+  implementation project(':web-face')
 }
 
