--- a/faceview/build.gradle
+++ b/faceview/build.gradle
@@ -1,40 +1,9 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
-apply plugin: 'kotlin-android-extensions'
-apply plugin: 'maven'
-
-android {
-  compileSdkVersion 28
-
-  defaultConfig {
-    minSdkVersion 19
-    targetSdkVersion 28
-    versionCode 1
-    versionName "1.0"
-
-    testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
-
-  }
-
-  buildTypes {
-    release {
-      minifyEnabled false
-      proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-    }
-  }
-
-}
+apply plugin: 'maven-publish'
 
 dependencies {
-  implementation 'androidx.appcompat:appcompat:1.0.0'
-  implementation 'io.reactivex.rxjava2:rxandroid:2.1.1'
-  implementation 'io.reactivex.rxjava2:rxjava:2.2.8'
-  implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
-  implementation 'androidx.paging:paging-runtime:2.1.0'
-  implementation 'androidx.paging:paging-rxjava2:2.1.0'
+  implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
+  implementation 'androidx.paging:paging-rxjava2-ktx:3.0.1'
   implementation project(':common')
-
-  testImplementation 'junit:junit:4.12'
-  androidTestImplementation 'androidx.test:runner:1.1.0'
-  androidTestImplementation 'androidx.test.espresso:espresso-core:3.1.0'
 }
