--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,3 +1,5 @@
 before_install:
-  - sdk install java 11.0.10-open
-  - sdk use java 11.0.10-open
+  - source "$HOME/.sdkman/bin/sdkman-init.sh"
+  - sdk update
+  - sdk install java 11.0.12-open
+  - sdk use java 11.0.12-open
