--- a/core/build.gradle
+++ b/core/build.gradle
@@ -1,18 +1,11 @@
 apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 apply plugin: 'maven-publish'
-apply plugin: 'kotlin-kapt'
-
-android {
-  buildFeatures {
-    viewBinding true
-  }
-}
 
 dependencies {
   implementation 'com.neovisionaries:nv-websocket-client:2.8'
   implementation 'androidx.room:room-runtime:2.3.0'
-  kapt 'androidx.room:room-compiler:2.3.0'
+//  kapt 'androidx.room:room-compiler:2.3.0'
   implementation 'androidx.room:room-rxjava2:2.3.0'
   implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
   implementation 'androidx.paging:paging-rxjava2-ktx:3.0.1'
