--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,9 +4,7 @@ apply plugin: 'maven-publish'
 
 dependencies {
   implementation 'com.neovisionaries:nv-websocket-client:2.8'
-  implementation 'androidx.room:room-runtime:2.3.0'
-//  kapt 'androidx.room:room-compiler:2.3.0'
-  implementation 'androidx.room:room-rxjava2:2.3.0'
+  implementation "androidx.room:room-paging:2.4.0-alpha04"
   implementation 'androidx.paging:paging-runtime-ktx:3.0.1'
   implementation 'androidx.paging:paging-rxjava2-ktx:3.0.1'
 
